--- a/bogdansko_frontend/package.json
+++ b/bogdansko_frontend/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ant-design/icons": "^5.2.6",
+        "antd": "^5.13.2",
         "formik": "^2.4.5",
         "next": "14.1.0",
         "react": "^18",
