--- a/bogdansko_frontend/package.json
+++ b/bogdansko_frontend/package.json
@@ -10,12 +10,15 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.2.6",
+        "@edgestore/react": "^0.1.6",
+        "@edgestore/server": "^0.1.6",
         "antd": "^5.13.2",
         "formik": "^2.4.5",
         "next": "14.1.0",
         "react": "^18",
         "react-dom": "^18",
-        "yup": "^1.3.3"
+        "yup": "^1.3.3",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/node": "^20",
