--- a/bogdansko_frontend/package.json
+++ b/bogdansko_frontend/package.json
@@ -13,6 +13,7 @@
         "@edgestore/react": "^0.1.6",
         "@edgestore/server": "^0.1.6",
         "antd": "^5.13.2",
+        "axios": "^1.6.7",
         "formik": "^2.4.5",
         "next": "14.1.0",
         "react": "^18",
